# worldgraph

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  visualizer.html
.claude/commands/: issue.md
.github/workflows/: claude-address-review.yml  claude-code-review.yml  claude-fix-issue.yml  claude-pr-review-response.yml  claude-review-pr.yml  claude.yml
data/: articles.json  clusters.json  extractions.json  graphs_0.json  graphs_1.json  graphs_2.json  ground_truth_entities.json  matched.json  matches.json
data/articles/: 05326419-cbf0-4fd7-8014-9b82233bdfeb.json  0c8dh6i9-5e7b-4fc2-d2a6-7j2g4e1f9h50.json  1d9ei7j0-6f8c-40d3-e3b7-8k3h5f2g0i61.json  766c3545-affc-4872-9918-edaa7929e5de.json  86953832-4d00-4cdc-ad11-5a074fcf2f70.json  9a1aa2eb-728e-405e-8ec7-3a144971fea1.json  a1b2c3d4-e5f6-4a7b-8c9d-0e1f2a3b4c5d.json  a1b2c3d4-e5f6-7890-abcd-ef1234567801.json  a1b2c3d4-e5f6-7890-abcd-ef1234567802.json  a1b2c3d4-e5f6-7890-abcd-ef1234567803.json  a1b2c3d4-e5f6-7890-abcd-ef1234567804.json  a1b2c3d4-e5f6-7890-abcd-ef1234567805.json  (+41 more)
docs/: cross_lingual.md  evidence_factor.md  functionality.md  hubness.md  multi_graph_alignment.md  name_similarity.md  negative_evidence.md  progressive_merging.md  sf_embedding_equivalence.md  similarity_flooding.md
tests/: conftest.py  test_adjacency.py  test_entity_names.py  test_functionality.py  test_graph_io.py  test_integration.py  test_names.py  test_propagation.py  test_relation_similarity.py  test_select_matches.py  test_union_find.py
worldgraph/: cli.py  cluster.py  constants.py  embed.py  eval.py  extract.py  graph.py  match.py  names.py  tune.py
(+53 files in other folders)
