[project]
name = "worldgraph"
version = "0.1.0"
description = "Cross-source structural matching for knowledge extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.83.0",
    "click>=8.3.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=4.0",
]

[project.scripts]
worldgraph = "worldgraph.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worldgraph"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py312"
